fix: index.html page's image too big on smaller screens

--- a/ArtQuiz/css/index.sass
+++ b/ArtQuiz/css/index.sass
@@ -8,7 +8,7 @@ body
   justify-content: space-between
 
   h1
-    margin: 25px 0 0
+    margin: 25px 0 5px
 
   .buttons
     width: 60%
@@ -25,10 +25,17 @@ body
       margin-bottom: 15px
       height: 40px
       &:last-of-type
-        margin-bottom: 5px
+        margin-bottom: 10px
   
-  img
+  .start-img
     width: 60%
+    overflow-y: hidden
+    margin-bottom: 10px
+    display: flex
+    justify-content: center
+    align-items: center
+    img
+      width: 100%
   
   footer
     background-color: $main-color
